Fixed headers to align center

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ header {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
+    align-items: center;
 }
 
 
